--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Choice Picker</title>
+    <title>Random Choice Picker</title>
 </head>
 
 <body>
+    <div class="container">
+        <h3>Enter all of the choices divided by a comma (','). <br>Press enter when you're done</h3>
+        <textarea placeholder="Enter choices here..." id="textarea"></textarea>
 
+        <div id="tags">
+            <div class="tag">Choice 1</div>
+            <div class="tag">Choice 2</div>
+
+            <div class="tag">Choice 3</div>
+
+        </div>
+    </div>
 </body>
 
 </html>
