--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
         <h3>Enter all of the choices divided by a comma (','). <br>Press enter when you're done</h3>
         <textarea placeholder="Enter choices here..." id="textarea"></textarea>
 
-        <div id="tags">
-            <div class="tag">Choice 1</div>
-            <div class="tag">Choice 2</div>
-
-            <div class="tag">Choice 3</div>
-
-        </div>
+        <div id="tags"></div>
     </div>
     <script src="custom.js"></script>
 </body>
